[package]
name = "dev-jerryimmouse"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ['csr'] }
leptos-use = { version = "0.16.0-beta2" }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77" }
